2008-01-18  Matthieu Nottale  <nottale@gostai.com>

        Add a method to read from stdin non-blocking.
        * include/libport/read-stdin.hh: New.
        * lib/libport-sources.mk: List the new .cc.
        * lib/read-stdin.cc: New.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Simplify.
	* lib/libport/libport-sources.mk: Use srcdir, not top_srcdir.
	Likewise with builddir.
	Fix lib/libport use.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Make inclusion of *.mk files easier.
	* Makefile.am, configure.ac: Adjust.
	* include/libport.mk: Move to...
	* include/libport/libport.mk: here, so that the includer can 
	find it without requiring to also include its parent.
	Adjust.
	* include/Makefile.am: Remove.
	* lib/libport/Makefile.am: Adjust.
	* lib/libport/libport-sources.mk: Adjut.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	include/libport.mk.
	* build-aux/urbi-libport.m4 (URBI_LIBPORT): Define
	libport_include_basedir, not libportdir.
	* include/Makefile.am: Rename as...
	* include/libport.mk: New.
	* include/Makefile.am: New.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Make libport autonomous.
	* Makefile.am: Adjust.
	* build-aux/bootstrap: Extend to install symlinks.
	* build-aux/build-aux.mk, build-aux/doxygen.mk, build-aux/init.mk,
	* build-aux/revision.mk, build-aux/urbi-doc.m4: Remove libport/
	prefix.
	* build-aux/urbi-libport.m4: Adjust.
	* build-aux/vcs/local.rb: Remove.
	* configure.ac: Adjust.
	* include/Makefile.am: Adjust.
	* lib/libport/Makefile.am: Rename from lib/Makefile.am.
	* lib/libport/cli.cc: Rename from lib/cli.cc.
	* lib/libport/contract.cc: Rename from lib/contract.cc.
	* lib/libport/deref.cc: Rename from lib/deref.cc.
	* lib/libport/escape.cc: Rename from lib/escape.cc.
	* lib/libport/file-system.cc: Rename from lib/file-system.cc.
	* lib/libport/indent.cc: Rename from lib/indent.cc.
	* lib/libport/libport-sources.mk: Rename from lib/libport-sources.mk.